Implement Movie Detail Fragment with Ui components

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,7 @@ org.gradle.caching=true
 # -------Build parameters--------
 # Values may be overridden in CI using gradlew "-Pname=value" param
 apiBaseUrl="https://api.themoviedb.org/3/"
+youtubeUrl="https://www.youtube.com/watch?v="
 apiToken="3f0e14ba634d761eb60d2f1fa6f08901"
 
 # -------Kotlin--------
